Fix text align

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -75,7 +75,7 @@
 .right {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: baseline;
   margin-left: 0.5rem;
   white-space: pre-wrap;
   word-break: break-all;
